put secrets and serverport in application.properties and updated readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+token=OTYxMjEzNjkzNzg4NTUzMzA3.Yk1uAw.13L_DJw75_H7-dBDFnsicIjJeYk
+user=admin
+password=isa
+sonarqubeAPI=http://localhost:9000/api
