--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,15 @@
             <version>3.8.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonarsource.scanner.api</groupId>
+            <artifactId>sonar-scanner-api</artifactId>
+            <version>2.16.2.588</version>
         </dependency>
     </dependencies>
 
