--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
+        <dependency>
+
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>5.3.12</version>
+        </dependency>
 
         <dependency>
             <groupId>org.sonarsource.scanner.api</groupId>
